--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,10 @@
   </head>
 
   <body>
-  <%= flash each do |name, msg| %>
+
+  <%= flash.each do |name, msg| %>
     <ul>
-    <li> <%= msg %></li>
+    <li> <%= msg %> </li>
     </ul>
 
     <% end %>
