--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,3 +7,7 @@ Title: <%= @article.title %>
 <p>
 Description: <%= @article.description %>
 </p>
+
+<br />
+<td><%= link_to 'Edit', edit_article_path(@article) %></td> <br />
+<%= link_to "Back to articles listing", articles_path %>
