Added partials and destroy actions

--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -46,9 +46,9 @@
        
         <h1 class="zion"> <a href="#goodrecipe2">Zion's Recipe Book</a> </h1>
 
-        <%= link_to 'Home', 'home' %>
-        <%= link_to 'About', 'about' %>
-        <%= link_to 'Faq', 'faq' %>
+        <%= link_to "Alpha Blog", articles_path %> | <%= link_to 'Home', 'home' %>
+        <%= link_to "Alpha Blog", articles_path %> | <%= link_to 'About', 'about' %>
+        <%= link_to "Alpha Blog", articles_path %> | <%= link_to 'Faq', 'faq' %>
         
         <h2 id="goodrecipe1"> Contents:</h2>
         
@@ -124,9 +124,9 @@
         
     <p><em>Source: <a href="#goodrecipe1">Some recipes websites</a></em></p>
 
-<%= link_to 'Home', 'home' %>
-<%= link_to 'About', 'about' %>
-<%= link_to 'Faq', 'faq' %>
+<%= link_to "Alpha Blog", articles_path %> | <%= link_to 'Home', 'home' %>
+<%= link_to "Alpha Blog", articles_path %> | <%= link_to 'About', 'about' %>
+<%= link_to "Alpha Blog", articles_path %> | <%= link_to 'Faq', 'faq' %>
     
     </body>
 </html>
