Many files created and modified

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,67 @@
+$navbar-default-bg: purple;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import 'bootstrap/dist/css/bootstrap';
+
+#logo {
+    float: left;
+    font-size: 1.7em;
+    color: purple;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    font-weight: bold;
+}
+
+#logo:hover {
+    color: cornflowerblue;
+    text-decoration: none;
+}
+
+.center {
+    text-align: center;
+    color: orange;
+}
+
+.jumbotron {
+    background-image: asset-url('icecream.jpg');
+    background-size: cover;
+    height: 500px;
+}
+
+.jumbotron h1 {
+    margin-bottom: 30px;
+    letter-spacing: -1px;
+    font-weight: bold;
+
+}
+
+.btn-xlarge {
+    font-size: 1.7em;
+    background-color: darkgreen;
+}
+
+footer {
+    margin-top: 45px;
+    padding-top: 5px;
+    border-top: 1px solid #aaaa;
+    color: #777;
+}
+
+footer a:hover {
+    color: #222;
+}
+
+footer small {
+    float: left;
+}
+
+footer ul {
+    float: right;
+    list-style: none;
+}
+
+footer ul li {
+    float: left;
+    margin-left: none;
+}
