--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,11 @@
   </head>
 
   <body>
-
+<%= render 'layouts/navigation' %>
 <%= render 'layouts/messages' %>
-Hello World!
+
+<div class="container">
     <%= yield %>
+    </div>
   </body>
 </html>
