--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -44,6 +44,13 @@
     </head>
     <body>
        
+
+
+<div class=" center jumbotron">
+<h1> ZION'S RESTAURANT</h1>
+<%= link_to "sign up now", "#", class: "btn btn-danger btn-lg btn-xlarge" %> 
+</div>
+
         <h1 class="zion"> <a href="#goodrecipe2">Zion's Recipe Book</a> </h1>
 
      <%= link_to "Alpha Blog", articles_path %> | <%= link_to 'About', 'about' %>
